welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: '(' expected but identifier found.
  if estSurMessage() {
     ^BDRBuggle:67: error: illegal start of simple expression
} 
^