welcome.lessons.welcome.bdr.BDR.scala.code
var BDR=true
var message:String ="plop"
while (BDR) {
  if estSurMessage() {
    message=litMessage()
    if (message=="R"){
      droite()
      avance()
    }
    else {
      if (message=="L"){
        gauche()
        avance()
      }
      else {
        if (message=="I"){
          gauche()
          gauche()
          avance()
        }
        else {
          if (message=="A"){
            avance()
          }
          else{
            if (message=="B"){
              avance()
              avance()
            }
            else {
              if (message=="C"){
                avance()
                avance()
                avance()
              }
              else{
                if (message=="Z"){
                  gauche()
                  gauche()
                  avance()
                }
                else {
                  if(message=="Y"){
                    gauche()
                    gauche()
                    avance()
                    avance()
                  }
                  else{
                    if (message=="X"){
                      gauche()
                      gauche()
                      avance()
                      avance()
                      avance()
                    }
                    else{BDR=false}
                  }
                }
              }
            }
          }
        }
      }
    }
  }
}